# multimedia_drm_framework

./: BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  config.gni
frameworks/native/: BUILD.gn
frameworks/native/drm/: common_napi.h  key_session_impl.cpp  media_decrypt_module_impl.cpp  media_key_system_factory_impl.cpp  media_key_system_impl.cpp
frameworks/native/test/: BUILD.gn
frameworks/native/test/common/include/: http.h
frameworks/native/test/common/src/: http.cpp
frameworks/native/test/fuzztest/: BUILD.gn
frameworks/native/test/fuzztest/drmservice_fuzzer/: BUILD.gn  drmservice_fuzzer.cpp  drmservice_fuzzer.h
frameworks/native/test/fuzztest/drmservice_fuzzer/corpus/: init
frameworks/native/test/fuzztest/mediakeydecryptndk_fuzzer/: BUILD.gn  mediakeydecryptndk_fuzzer.cpp  mediakeydecryptndk_fuzzer.h
frameworks/native/test/fuzztest/mediakeysessionndk_fuzzer/: BUILD.gn  mediakeysessionndk_fuzzer.cpp  mediakeysessionndk_fuzzer.h
frameworks/native/test/fuzztest/mediakeysystemndk_fuzzer/: BUILD.gn  mediakeysystemndk_fuzzer.cpp  mediakeysystemndk_fuzzer.h  project.xml
frameworks/native/test/fuzztest/mediakeysystemndkfactory_fuzzer/: BUILD.gn  mediakeysystemndkfactory_fuzzer.cpp  mediakeysystemndkfactory_fuzzer.h  project.xml
frameworks/native/test/fuzztest/resource/: ohos_test.xml
frameworks/native/test/unittest/: BUILD.gn
frameworks/native/test/unittest/include/: av_play_unittest.h  drm_framework_unittest.h
frameworks/native/test/unittest/src/: av_play_unittest.cpp  drm_framework_dfx_add_unittest.cpp  drm_framework_dfx_unittest.cpp  drm_framework_function_unittest.cpp  drm_framework_unittes_v2.cpp  drm_framework_unittest.cpp
frameworks/taihe/: BUILD.gn
frameworks/taihe/idl/: ohos.multimedia.drm.taihe
frameworks/taihe/include/: drm_ani_common.h  drm_error_code_taihe.h  drm_taihe_utils.h  key_session_callback_taihe.h  key_session_taihe.h  media_key_system_callback_taihe.h  media_key_system_taihe.h
frameworks/taihe/src/: ani_constructor.cpp  drm_taihe_utils.cpp  key_session_callback_taihe.cpp  key_session_taihe.cpp  media_key_system_callback_taihe.cpp  media_key_system_taihe.cpp
interfaces/kits/c/drm_capi/: BUILD.gn
interfaces/kits/c/drm_capi/common/: native_drm_base.h  native_drm_common.h  native_drm_err.h  native_drm_object.h  native_err_convertor.h
interfaces/kits/c/drm_capi/include/: BUILD.gn  libnative_drm.ndk.json  native_mediakeysession.h  native_mediakeysystem.h
interfaces/kits/js/drm_napi/: @ohos.multimedia.drm.d.ts  BUILD.gn
interfaces/kits/js/drm_napi/include/: common_napi.h  drm_enum_napi.h  drm_error_code_napi.h  drm_napi.h  key_session_callback_napi.h  key_session_napi.h  media_decrypt_module_napi.h  media_key_system_callback_napi.h  media_key_system_napi.h  native_module_ohos_drm.h
patches/: patches.json
sa_profile/: BUILD.gn
sa_profile/lazy_loading/: 3012.json
sa_profile/resident/: 3012.json
services/drm_service/: BUILD.gn
services/drm_service/client/include/: drm_listener_proxy.h  key_session_service_callback_proxy.h  key_session_service_proxy.h  media_decrypt_module_service_proxy.h  mediakeysystem_service_callback_proxy.h  mediakeysystem_service_proxy.h  mediakeysystemfactory_service_proxy.h
services/drm_service/client/src/: drm_listener_proxy.cpp  key_session_service_callback_proxy.cpp  key_session_service_proxy.cpp  media_decrypt_module_service_proxy.cpp  mediakeysystem_service_callback_proxy.cpp  mediakeysystem_service_proxy.cpp  mediakeysystemfactory_service_proxy.cpp
services/drm_service/idls/: BUILD.gn  DrmTypes.idl  IDrmListener.idl  IMediaDecryptModuleService.idl  IMediaKeySessionService.idl  IMediaKeySessionServiceCallback.idl  IMediaKeySystemFactoryService.idl  IMediaKeySystemService.idl  IMediaKeySystemServiceCallback.idl
services/drm_service/ipc/: drm_death_recipient.h  drm_types.h  i_drm_listener.h  i_keysession_service.h  i_keysession_service_callback.h  i_mediadecryptmodule_service.h  i_mediakeysystem_service.h  i_mediakeysystem_service_callback.h  i_mediakeysystemfactory_service.h  i_standard_mediakeysystem_listener.h  remote_request_code.h
services/drm_service/server/include/: drm_host_manager.h  drm_listener_stub.h  key_session_service.h  key_session_service_callback_stub.h  key_session_service_stub.h  media_decrypt_module_service.h  media_decrypt_module_service_stub.h  mediakeysystem_service.h  mediakeysystem_service_callback_stub.h  mediakeysystem_service_stub.h  mediakeysystemfactory_service.h  mediakeysystemfactory_service_stub.h
services/drm_service/server/include/v1_0/: imedia_decrypt_module.h  imedia_key_session.h  imedia_key_session_callback.h  imedia_key_system.h  imedia_key_system_callback.h  imedia_key_system_factory.h  ioem_certificate.h  media_decrypt_module_proxy.h  media_decrypt_module_stub.h  media_key_session_callback_proxy.h  media_key_session_callback_stub.h  media_key_session_proxy.h  media_key_session_stub.h  media_key_system_callback_proxy.h  media_key_system_callback_stub.h  media_key_system_factory_proxy.h  media_key_system_factory_stub.h  media_key_system_proxy.h  media_key_system_stub.h  media_key_system_types.h  oem_certificate_proxy.h  oem_certificate_stub.h
services/drm_service/server/src/: drm_host_manager.cpp  drm_listener_stub.cpp  key_session_service.cpp  key_session_service_callback_stub.cpp  key_session_service_stub.cpp  media_decrypt_module_service.cpp  media_decrypt_module_service_stub.cpp  mediakeysystem_service.cpp  mediakeysystem_service_callback_stub.cpp  mediakeysystem_service_stub.cpp  mediakeysystemfactory_service.cpp  mediakeysystemfactory_service_stub.cpp
services/etc/: BUILD.gn  drm_api_operation.cfg  (+3 more)
services/utils/: BUILD.gn  drm_api_operation.cpp  drm_dfx.cpp  drm_dfx_utils.cpp  drm_helper.cpp  drm_net_observer.cpp  drm_trace.cpp  hdi_err_convertor.cpp
services/utils/include/: drm_api_operation.h  drm_common_utils.h  drm_dfx.h  drm_dfx_utils.h  drm_error_code.h  drm_helper.h  drm_log.h  drm_napi_utils.h  drm_net_observer.h  drm_trace.h  hdi_err_convertor.h  napi_async_work.h  napi_param_utils.h
(+21 files in other folders)
