# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#import("//build/config/ohos/rules.gni")
import("//build/ohos.gni")
group("multimedia_drm_framework") {
  deps = [
    "./frameworks/native:drm_framework",
    "./interfaces/kits/c/drm_capi:native_drm",
    "./interfaces/kits/js/drm_napi:drm_napi",
    "./services/drm_service:drm_service",
    "./services/drm_service/idls:idl_sa_proxy",
    "./services/drm_service/idls:idl_sa_stub",
  ]
}